--- a/src/layouts/Footer/Footer.scss
+++ b/src/layouts/Footer/Footer.scss
@@ -1,12 +1,13 @@
-@import "src/variable";
+@import 'src/variable';
 
 footer.footer {
-  font-size: 1.6rem;
+  font-size: toRem(16);
   font-weight: 400;
   color: gray;
 
-  .product-banner {
+  .footer-banner {
     width: 100%;
+    margin-top: 50px;
     background-color: white;
     overflow: hidden;
 
@@ -23,16 +24,16 @@ footer.footer {
   }
 
   .container {
-    padding: 2rem 0 3rem;
+    padding: toRem(20) 0 toRem(30);
 
     @media (max-width: 576px) {
       & {
-        padding: 0rem 3rem;
+        padding: toRem(0) toRem(30);
       }
     }
     .row {
       .heading {
-        font-size: 1.8rem;
+        font-size: toRem(18);
         font-weight: 700;
       }
 
@@ -52,7 +53,7 @@ footer.footer {
 
               &:hover {
                 color: $primary-color;
-                transform: translateX(0.5rem);
+                transform: translateX(toRem(0.5));
               }
             }
           }
@@ -65,16 +66,16 @@ footer.footer {
           display: flex;
 
           .follow-us__item {
-            $dimension: 3.2rem;
+            $dimension: toRem(32);
             width: $dimension;
             height: $dimension;
             line-height: $dimension;
             text-align: center;
 
-            font-size: 1.4rem;
+            font-size: toRem(14);
             border: 1px solid gray;
             border-radius: 5px;
-            margin-right: 1rem;
+            margin-right: toRem(10);
 
             a {
               transition: 0.6s;
@@ -85,14 +86,14 @@ footer.footer {
 
               &:hover {
                 color: #fff;
-                box-shadow: inset 2rem 2rem 0 $primary-color,
-                  inset -2rem -2rem 0 $primary-color;
+                box-shadow: inset 1.8rem 1.8rem 0 $primary-color,
+                  inset -1.8rem -1.8rem 0 $primary-color;
               }
             }
           }
 
           .instagram {
-            font-size: 1.6rem;
+            font-size: toRem(16);
           }
         }
       }
