--- a/src/pages/DetailProductPage/DetailProductPage.scss
+++ b/src/pages/DetailProductPage/DetailProductPage.scss
@@ -1,82 +1,85 @@
 @import 'src/variable';
 
-.product-item-page {
-  padding-top: toRem(30);
-  .product-img__wrap {
-    user-select: none;
-    img {
-      width: 100%;
-      border-radius: toRem(5);
-    }
-  } // end of .product-img__wrap
+.product-detail-page {
+  .product-detail {
+    padding-top: toRem(30);
 
-  .product-detail-infor {
-    margin-left: toRem(30);
-    .product-title {
-      margin-top: toRem(10);
-      font-size: toRem(22);
-      font-weight: 700;
-    }
-
-    .product-price {
-      span {
-        font-size: toRem(20);
-        font-weight: 700;
-        color: $primary-color;
-      }
-    }
-
-    .btn-wrap {
-      display: flex;
-      align-items: center;
-      // margin: toRem(10) 0 toRem(20);
-
-      .btn-item {
-        user-select: none;
-        flex: 1;
-        max-width: toRem(140);
-        margin: toRem(10) toRem(10) toRem(10) 0;
-
-        background-color: $primary-color;
+    .product-img__wrap {
+      user-select: none;
+      img {
+        width: 100%;
         border-radius: toRem(5);
-        padding: toRem(8) 0;
-        overflow: hidden;
+      }
+    } // end of .product-img__wrap
 
-        font-size: toRem(15);
-        font-weight: 600;
-        text-transform: uppercase;
-        text-align: center;
+    .product-detail-infor {
+      margin-left: toRem(30);
+      .product-title {
+        margin-top: toRem(10);
+        font-size: toRem(22);
+        font-weight: 700;
+      }
 
-        border: 1px solid #ccc;
-        color: #fefefe;
-
-        cursor: pointer;
-
-        &:hover {
-          color: #fefefe;
+      .product-price {
+        span {
+          font-size: toRem(20);
+          font-weight: 700;
+          color: $primary-color;
         }
-      } // end of button-wrap
-    }
-    .product-desc {
-      border-top: 1px solid;
-      margin-top: toRem(12);
+      }
 
-      .product-desc-title {
+      .btn-wrap {
+        display: flex;
+        align-items: center;
+        // margin: toRem(10) 0 toRem(20);
+
+        .btn-item {
+          user-select: none;
+          flex: 1;
+          max-width: toRem(140);
+          margin: toRem(10) toRem(10) toRem(10) 0;
+
+          background-color: $primary-color;
+          border-radius: toRem(5);
+          padding: toRem(8) 0;
+          overflow: hidden;
+
+          font-size: toRem(15);
+          font-weight: 600;
+          text-transform: uppercase;
+          text-align: center;
+
+          border: 1px solid #ccc;
+          color: #fefefe;
+
+          cursor: pointer;
+
+          &:hover {
+            color: #fefefe;
+          }
+        } // end of button-wrap
+      }
+      .product-desc {
+        border-top: 1px solid;
         margin-top: toRem(12);
-        font-size: toRem(18);
-        font-weight: 600;
+
+        .product-desc-title {
+          margin-top: toRem(12);
+          font-size: toRem(18);
+          font-weight: 600;
+        }
+
+        .detail {
+          font-size: toRem(16);
+          white-space: pre-line;
+          word-break: break-word;
+        }
       }
 
-      .detail {
+      .product-infor {
+        margin-top: toRem(10);
         font-size: toRem(16);
-        white-space: pre-line;
-        word-break: break-word;
       }
-    }
-
-    .product-infor {
-      margin-top: toRem(10);
-      font-size: toRem(16);
     }
   }
 } // end of .product-item-page
