--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -3,6 +3,7 @@
 .cart-page {
   .cart-page-container {
     margin-top: toRem(20);
+    margin-bottom: toRem(30);
 
     .cart-page-content {
       padding: toRem(16) toRem(20) toRem(20);
