--- a/src/pages/DetailProductPage/DetailProductPage.scss
+++ b/src/pages/DetailProductPage/DetailProductPage.scss
@@ -3,6 +3,7 @@
 .product-detail-page {
   .product-detail {
     padding-top: toRem(30);
+    padding-bottom: toRem(30);
 
     .product-img__wrap {
       user-select: none;
