--- a/src/layouts/TopNav/TopNav.scss
+++ b/src/layouts/TopNav/TopNav.scss
@@ -3,7 +3,6 @@
   position: sticky;
   top: 0;
   z-index: $top-nav-zindex;
-  
 
   ul {
     padding-left: 0;
@@ -15,7 +14,7 @@
     position: relative;
     display: flex;
     width: 100%;
-    padding: toRem(10) toRem(12);
+    padding: toRem(12) toRem(12);
     text-align: center;
 
     align-items: center;
@@ -35,148 +34,25 @@
     }
     // end of top nav branch
 
-    & > .top-nav__list {
-      display: flex;
-      margin: 0;
-      margin-right: toRem(40);
-      align-items: center;
+    .search-wrap {
+      flex: 0.9;
+      position: relative;
 
-      .top-nav-item {
-        margin: toRem(10);
-        position: relative;
-        cursor: pointer;
-        user-select: none;
-
-        a {
-          font-size: toRem(16);
-          text-decoration: none;
-          font-weight: 700;
-          text-transform: uppercase;
-
-          & > i { 
-            position: relative;
-            transition: 0.3s;
-          }
-        }
-
-        &::before {
-          content: '';
-          display: block;
-          position: absolute;
-          display: none;
-
-          width: 100%;
-          height: 100%;
-          background-color: transparent;
-          top: 100%;
-        }
-
-        &::after {
-          content: '';
-          display: block;
-          border-radius: 2px;
-          width: 0;
-
-          margin: -2px -5% auto;
-          height: toRem(3);
-          transition: all 0.3s;
-          position: absolute;
-
-          background-image: linear-gradient($yellow-color, $yellow-color);
-          transform: translateX(-50%);
-          left: 55%;
-          top: 120%;
-        }
-
-        .top-nav-product-list {
-          position: absolute;
-          top: 180%;
-          width: toRem(250);
-          left: 50%;
-          z-index: $top-nav-zindex;
-
-          box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.15);
-          border-radius: 4px;
-          overflow: hidden;
-
-          transition: 0.3s;
-          transform-origin: top;
-          transform: scaleY(0) translateX(-50%);
-          opacity: 0;
-
-          .top-nav-product-item {
-            text-align: left;
-            position: relative;
-
-            &:not(:first-child) {
-              border-top: 1px solid rgba(0, 0, 0, 0.1);
-            }
-
-            a {
-              display: inline-block;
-              width: 100%;
-              padding: toRem(10) toRem(20) toRem(10) toRem(20);
-              font-weight: 400;
-            }
-
-            i {
-              position: absolute;
-              right: toRem(1.5);
-              transform: rotate(90deg);
-
-              transition: 0.3s;
-            }
-            .product-sub-list {
-              opacity: 0;
-              position: absolute;
-              left: 100%;
-              top: 0px;
-
-              z-index: $top-nav-zindex;
-              border-radius: 3px;
-              width: 90%;
-
-              transition: transform 0.5s, opacity 0.5s;
-              transform-origin: left;
-              transform: scaleX(0);
-              opacity: 0;
-            }
-
-            &:hover {
-              background-color: $primary-color;
-              i {
-                transform: rotate(0deg);
-              }
-
-              .product-sub-list {
-                opacity: 1;
-                transform: scaleX(1);
-              }
-            }
-          }
-          // end of product item
-        }
-        // end of product list
-
-        &:hover {
-          &::after {
-            width: 100%;
-          }
-
-          &::before {
-            display: block;
-          }
-
-          .top-nav-product-list {
-            // display: block;
-            transform: scaleY(1) translateX(-50%);
-            opacity: 1;
-          }
-        }
+      .search-btn {
+        // position: absolute;
+        border-top-left-radius: toRem(50);
+        border-bottom-left-radius: toRem(50);
+        background-color: $primary-color;
+        border-color: $primary-color;
       }
-      // end of top nav item
+
+      .input-search {
+        // padding-left: toRem(90);
+        // border-radius: toRem(50);
+        border-top-right-radius: toRem(50);
+        border-bottom-right-radius: toRem(50);
+      }
     }
-    // end of top nav list
 
     .top-nav-btn-wrap {
       display: flex;
@@ -252,6 +128,20 @@
         }
       }
       // ennd of top nav cart
+    }
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+      // align-items: stretch;
+
+      .search-wrap {
+        width: 100%;
+        // margin: toRem(8) 0;
+      }
+
+      .top-nav-btn-wrap {
+        display: none;
+      }
     }
   }
   // end of contianer
