--- a/src/variable.scss
+++ b/src/variable.scss
@@ -2,6 +2,7 @@ $purple-color: #800080;
 $light-purple-color: #b300b3;
 $blue-text-color: #0fbdf2;
 $white-text-color: #fafafa;
+$black-text-color: black;
 
 $yellow-color: #f5cf45;
 $pink-color: rgb(219, 112, 147);
