--- a/src/pages/AccountPage/ProfilePage/ProfilePage.scss
+++ b/src/pages/AccountPage/ProfilePage/ProfilePage.scss
@@ -105,6 +105,10 @@
           flex: 1;
         }
       }
+
+      .gender-item {
+        text-transform: capitalize;
+      }
       // form-gr-row
     }
     // personal-info
